<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".activities.CreateFerramenta">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:padding="14dp">

            <TextView
                android:id="@+id/_titulo"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cadastro"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/digite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/_ferramenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="51dp"
                android:text="@string/ferramenta" />

            <EditText
                android:id="@+id/ferramenta"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="71dp"
                android:ems="10"
                android:hint="Furadeira"
                android:inputType="text|textAutoCorrect|textAutoComplete"
                android:autofillHints="" />

            <TextView
                android:id="@+id/_fabricante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="123dp"
                android:text="@string/fabricante" />


            <EditText
                android:id="@+id/fabricante"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="143dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="Booch"
                android:inputType="text|textAutoCorrect|textAutoComplete" />

            <TextView
                android:id="@+id/_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="203dp"
                android:text="@string/preco" />


            <EditText
                android:id="@+id/preco"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="223dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/cifrao"
                android:inputType="number|numberSigned|numberDecimal" />

            <TextView
                android:id="@+id/_cor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="211dp"
                android:layout_marginTop="203dp"
                android:text="@string/cor" />

            <EditText
                android:id="@+id/cor"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="210dp"
                android:layout_marginTop="223dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="Vermelho"
                android:inputType="text|textAutoCorrect|textAutoComplete" />

            <TextView
                android:id="@+id/_referencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="284dp"
                android:text="@string/referencia" />

            <EditText
                android:id="@+id/referencia"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="304dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="CODE357159"
                android:inputType="text|textAutoCorrect|textAutoComplete" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="73dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/btn_white"
                android:text="@string/voltar"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnCancelar"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="73dp"
                android:background="@drawable/btn_green"
                android:text="@string/cadastrar"
                android:textAllCaps="false" />

        </RelativeLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>