<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth"
    tools:context=".activities.Login">

    <View
        android:id="@+id/filtro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:background="#000000" />

    <TextView
        android:id="@+id/_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login"
        android:textSize="70sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/_subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:layout_below="@+id/_titulo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_subtitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail"
        android:layout_alignEnd="@+id/txtEmail"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="-2dp"
        android:drawableStart="@drawable/ic_vpn_key"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#cccccc"
        android:textSize="20sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSenha"
        android:layout_alignStart="@+id/txtSenha"
        android:layout_alignEnd="@+id/txtSenha"
        android:layout_marginStart="2dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="-1dp"
        android:background="@drawable/btn_green"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:visibility="gone" />

</RelativeLayout>